--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -167,7 +167,9 @@
     <string name="pref_angles_summary">За места левой линейки Вы можете включить угломер на левой стороне экрана в мере градусов или радианов.</string>
     <string name="help_intro">Приложение Privacy Friendly Рулетка превращает Ваш телефон в линейку в случае, если Вам нужно что-то измерить но под рукой нет измерительного устройства.</string>
     <string name="help_camera_ruler_heading">Камера-линейка</string>
-    <string name="help_camera_ruler">Вы можете снять фотографию камерой или выбрать фотографию из галереи. Снимите фотографию так, чтобы все важные объекты были в одной плоскости и телефон был параллельно к этой плоскости. Выберите подходящий эталон из меню в верхнем правом углу, поместите зелёною фигуру над эталоном в фотографии и одобрите выбор кнопкой в нижнем правом углу. Теперь Вы можете выбрать фигуру, которою измерить, из меню в нижнем правом углу. Вы можете мерить длину линий и площадь треугольников, четырёхугольников и кругов.</string>
+    <string name="help_camera_ruler1">Вы можете снять фотографию камерой или выбрать фотографию из галереи. Снимите фотографию так, чтобы все важные объекты были в одной плоскости и телефон был параллельно к этой плоскости.</string>
+    <string name="help_camera_ruler2">Выберите подходящий эталон из меню в верхнем правом углу, поместите зелёною фигуру над эталоном в фотографии и одобрите выбор кнопкой в нижнем правом углу.</string>
+    <string name="help_camera_ruler3">Теперь Вы можете выбрать фигуру, которою измерить, из меню в нижнем правом углу. Вы можете мерить длину линий и площадь треугольников, четырёхугольников и кругов.</string>
     <string name="help_permission">Разрешения</string>
     <string name="help_permission_answer">Privacy Friendly Рулетка не нуждается в разрешеньях чтобы снять фотографию камерой и измерить её. Чтобы измерить фотографию из галереи этому приложенью нужно разрешение Read External Storage, так как большинство фотографий не находятся в встроенной памяти телефона.</string>
 
