--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -167,7 +167,9 @@
     <string name="pref_angles_summary">Lineāla vietā ekrāna kreisajā pusē var uzrādīt Leņķmēri grādos vai radiānos.</string>
     <string name="help_intro">Privacy Friendly Mērlente pārvērš Jūsu viedtālruni par lineālu, lai izmērītu lietas, kad pa rokai nav īsta mērinstrumenta.</string>
     <string name="help_camera_ruler_heading">Kameras lineāls</string>
-    <string name="help_camera_ruler">Jūs varat uzņemt fotogrāfiju ar telefona kameru vai izvēlēties attēlu no galerijas. Nodrošiniet, ka visi svarīgie objekti ir vienā plaknē un ka fotogrāfija tika uzņemta perpendikulāri tai plaknē. Izvēleties vajadzīgo referenci izvēlnē augšējā labajā stūrī, novietojiet zaļo figūru uz references attēlā un apstipriniet ar pogu apakšējā labajā stūrī. Tagad Jūs varat izvēlēties figūru, kuru Jūs gribat izmērīt no izvēlnes apakšējā labajā stūrī. Jūs varat mērīt līniju garumu un trīstūru, četrstūru und apļu platību.</string>
+    <string name="help_camera_ruler1">Jūs varat uzņemt fotogrāfiju ar telefona kameru vai izvēlēties attēlu no galerijas. Nodrošiniet, ka visi svarīgie objekti ir vienā plaknē un ka fotogrāfija tika uzņemta perpendikulāri tai plaknē.</string>
+    <string name="help_camera_ruler2">Izvēleties vajadzīgo referenci izvēlnē augšējā labajā stūrī, novietojiet zaļo figūru uz references attēlā un apstipriniet ar pogu apakšējā labajā stūrī.</string>
+    <string name="help_camera_ruler3">Tagad Jūs varat izvēlēties figūru, kuru Jūs gribat izmērīt no izvēlnes apakšējā labajā stūrī. Jūs varat mērīt līniju garumu un trīstūru, četrstūru und apļu platību.</string>
     <string name="help_permission">Atļaujas</string>
     <string name="help_permission_answer">Privacy Friendly Mērlente neizmanto nekādas atļaujas lai veiktu mērijumus fotogrāfijās tieši no telefona kameras. Lai mērītu attēlus no galerijas, lietotnei ir vajadzīga Read External Storage atļauja, jo lielākā daļa fotogrāfiju nav saglabāta telefona iebūvētajā atmiņā.</string>
 
