Improved the edit dialog. Now units of measurement are shown behind the size input field. They change from mm to inch depending on the settings. With already defined objects the value is displayed in the currently active unit of measurement although internally it is always in mm. Depending on the shape button checked the text in front of the size input field changes to better guide the user to setting the correct value. Line has "size", circle has "diameter" and tetragon has "area". When switching the shape to tetragon the unit gets the ² addition. It is removed when shape is switched to circle or line.

--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -238,6 +238,7 @@
     <string name="edit_circle">Aplis</string>
     <string name="edit_tetragon">Četrstūris</string>
     <string name="edit_size">Izmērs:</string>
+    <string name="diameter">Diametrs:</string>
     <string name="cancel">Atcelt</string>
     <string name="delete">Izdzēst</string>
 
