--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -238,6 +238,7 @@
     <string name="edit_circle">Kreis</string>
     <string name="edit_tetragon">Viereck</string>
     <string name="edit_size">Größe:</string>
+    <string name="diameter">Durchmesser:</string>
     <string name="cancel">Abbrechen</string>
     <string name="delete">Löchen</string>
 
