--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -238,6 +238,7 @@
     <string name="edit_circle">Круг</string>
     <string name="edit_tetragon">Четырёхугольник</string>
     <string name="edit_size">Размер:</string>
+    <string name="diameter">Диаметр:</string>
     <string name="cancel">Отменить</string>
     <string name="delete">Удалить</string>
 
