--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -175,7 +175,7 @@
 
     <!--###ABOUT###-->
     <string name="about">Информация</string>
-    <string name="version_number">Версия 1.0</string>
+    <string name="version_number">Версия v%s</string>
     <string name="about_author">"Авторы: "</string>
     <string name="about_author_contributors">и сотрудники.</string>
     <string name="about_affiliation">В сотрудничестве с</string>
